# laba3.3

1task/: List1.h  List2.cpp  List2.h  a.out  array.txt  hashtable.cpp  hashtable.h  hashtable.txt  list1.txt  list2.txt  main.cpp  main.out  node.h  queue.cpp  queue.h  stack.cpp  stack.h  tree.cpp  tree.h  tree.txt
3taskBenchmark/: CMakeLists.txt  List1.cpp  List2.cpp  commands.txt  hashtable.cpp  main_test.cpp  massive.cpp  queue.cpp  stack.cpp  tree.cpp  tree.h
3taskTest/: CMakeLists.txt  List1.h  List1_test.cpp  List2.h  List2_test.cpp  commands.txt  hashtable.h  hashtable_test.cpp  massive.h  massive_test.cpp  queue.h  queue_test.cpp  stack.h  stack_test.cpp  tree_test.cpp
4task/: List1.cpp  List1.h  List2.cpp  List2.h  a.out  hashtable.cpp  hashtable.h  main.cpp  main.out  massive.cpp  massive.h  queue.cpp  queue.h  stack.cpp  stack.h  tree.cpp  tree.h  tree.txt
